src/objects/Object_Audit__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DisableTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisableTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Id_Field__c</fullName>
        <label>Parent Id Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <label>Parent Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Changes</label>
        <type>Checkbox</type>
    </fields>
    <label>Object Audit</label>
</CustomObject>